--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             padding: 10px 15px; border-bottom: 1px solid var(--border-color);
             background-color: var(--background-color); z-index: 100;
         }
-        .app-header .logo { font-family: 'Grand Hotel', cursive; font-size: 28px; color: var(--text-color); }
+        .app-header .logo { font-family: 'Arial', cursive; font-size: 28px; color: var(--text-color); }
 
         .job-card { background-color: var(--white); border-bottom: 1px solid var(--border-color); animation: none; }
         .job-card.highlight { animation: highlight-job 2s ease-out forwards; }
